# hdt

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  README.org  TODO.org  pack.pl
c/: hdt4pl.cpp
doc/: dev.org
prolog/: closure.pl  hdt.pl  hdt11.pl  hdt_atom.pl  hdt_db.pl  hdt_generic.pl  hdt_id.pl  hdt_term.pl  test_hdt.pl
prolog/semweb/: hdt11.pl  hdt_db.pl  hdt_generic.pl
test/: test-1.nt  test-2.nt  test-3.nt  test.pl  test_hdt.pl  test_hdt11.pl  test_hdt_atom.pl  test_hdt_db.pl  test_hdt_id.pl  test_hdt_term.pl
tmp/: hdt.tmp.cpp  hdt_atom.pl  hdt_types.pl
